[gd_scene load_steps=5 format=3 uid="uid://d1oqksc2i3nok"]

[ext_resource type="Script" uid="uid://bgdk22o4uvmqi" path="res://Scripts/magic_button.gd" id="1_lpx4t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0e37"]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3g7lg"]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhst1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="MagicButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpx4t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -25.0
offset_right = 115.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ButtonControl"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e0e37")
theme_override_styles/hover = SubResource("StyleBoxFlat_3g7lg")

[node name="White" type="ColorRect" parent="ButtonControl/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Colors" type="Control" parent="ButtonControl/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.43266913, 0.30703178, 0.5477194, 1)

[node name="ColorRect2" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.16393977, 0.43499455, 0.25166428, 1)

[node name="ColorRect3" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.17810231, 0.39288408, 0.5443304, 1)

[node name="Label" type="Label" parent="ButtonControl"]
self_modulate = Color(0.47007585, 0.47007585, 0.47007585, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Something"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bhst1")

[connection signal="mouse_entered" from="ButtonControl/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonControl/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="ButtonControl/Button" to="." method="_on_button_pressed"]
